--- a/output/index.html
+++ b/output/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
     <head>
         <title>Documentation</title>
     </head>
@@ -7,6 +7,6 @@
 
     </body>
     <script type="text/javascript">
-        window.location = window.location.pathname.replace('index.html', '').replace(/\/?$/, '/') + 'en/index.html';
+        window.location = window.location.pathname.replace('index.html', '').replace(/\/?$/, '/') + 'ja/index.html';
     </script>
 </html>
