--- a/output/index.html
+++ b/output/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
     <head>
-        <title>Documentation</title>
+        <title>Administrator Manual</title>
     </head>
     <body>
 
